# voice-pulse

./: .gitignore  CHANGELOG.md  README.md  devenv.nix  main.py  pyproject.toml
.github/workflows/: main.yml  pr.yml
voice_pulse/: __init__.py  config.py  enums.py  input_sources.py  listener.py  speech_filters.py  speech_processing.py  speech_segment.py
