[tool.poetry]
name = "voice-pulse"
version = "0.0.0"
description = "Voice-Pulse is a Python library for real-time speech detection and collection, supporting multiple configurable VAD engines like WebRTC and Silero. Ideal for real-time speech processing applications."
authors = ["Ivan Zatevakhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
pydantic = "^2.0"
numpy = "^1.25.2"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchaudio = {version = "^2.0.2+cpu", source = "pytorch"}
webrtcvad = "^2.0.10"
onnxruntime = "^1.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
python-semantic-release = "^9.8.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    # "SIM", # nope
    # isort
    "I",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"
